--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     .chart-wrapper { width: 100%; height: 300px; background: #fff; border-radius: 15px; padding: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
     .anim-character { display: block; margin: 20px auto; width: 180px; animation: float 3s ease-in-out infinite; }
     @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
-    .popup { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); justify-content: center; align-items: center; z-index: 99999; opacity: 0; transition: opacity 0.3s ease-in-out; }
-    .popup.show { display: flex; opacity: 1; }
+    .popup, .history-popup { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); justify-content: center; align-items: center; z-index: 99999; opacity: 0; transition: opacity 0.3s ease-in-out; }
+    .popup.show, .history-popup.show { display: flex; opacity: 1; }
     label { display: block; margin-top: 1rem; font-weight: 600; color: #b85d8c; }
     input { width: 100%; padding: 0.6rem; border: 1px solid #fbcfd9; border-radius: 14px; margin-top: 0.3rem; font-size: 1rem; background-color: #fff0f6; }
     input:focus { outline: none; box-shadow: 0 0 8px #ffaec8; background-color: #ffe5ec; }
@@ -40,17 +40,15 @@
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif" class="anim-character" />
 
     <form id="loanForm">
-      <label>ชื่อ</label>
+      <label for="name">ชื่อ</label>
       <input type="text" id="name" required />
-      <label>เงินต้น (บาท)</label>
+      <label for="principal">เงินต้น</label>
       <input type="number" id="principal" required />
-      <label>ดอกเบี้ยต่อเดือน (%)</label>
+      <label for="rate">ดอกเบี้ย (%)</label>
       <input type="number" id="rate" step="0.01" required />
-      <label>วันที่เริ่มยืม</label>
+      <label for="startDate">วันที่เริ่มยืม</label>
       <input type="date" id="startDate" required />
-      <button type="submit">➕ เพิ่มลูกหนี้</button>
-      <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
-      <input type="file" id="uploadFile" accept=".json" onchange="uploadData(event)" style="display:inline-block;margin-top:1rem" />
+      <button type="submit">เพิ่ม</button>
     </form>
 
     <table id="summaryTable">
@@ -77,13 +75,11 @@
     </table>
   </div>
 
-  <!-- Popup ตัวการ์ตูน -->
   <div class="popup" id="popup">
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif">
   </div>
 
-  <!-- Popup ประวัติ -->
-  <div class="popup" id="historyPopup">
+  <div class="popup history-popup" id="historyPopup">
     <div style="background:#fff;padding:2rem;border-radius:15px;max-width:500px;width:90%;overflow:auto;max-height:90vh">
       <h2>📜 ประวัติการชำระเงิน</h2>
       <div id="historyContent"></div>
@@ -92,188 +88,156 @@
   </div>
 
   <script>
-    let loans = JSON.parse(localStorage.getItem('loans') || '[]');
+    window.addEventListener('DOMContentLoaded', () => {
+      const loanForm = document.getElementById('loanForm');
+      const nameInput = document.getElementById('name');
+      const principalInput = document.getElementById('principal');
+      const rateInput = document.getElementById('rate');
+      const startDateInput = document.getElementById('startDate');
+      const summaryTableBody = document.querySelector('#summaryTable tbody');
+      const summaryFooter = document.getElementById('summaryFooter');
+      const ctx = document.getElementById('loanChart').getContext('2d');
 
-    function formatDate(dateStr) {
-      const d = new Date(dateStr);
-      return d.toLocaleDateString('th-TH');
-    }
+      let loanChart;
+      let loans = JSON.parse(localStorage.getItem('loans') || '[]');
 
-    function getTotalPaid(loan, type = null) {
-      return (loan.repayments || [])
-        .filter(r => !type || r.type === type)
-        .reduce((sum, r) => sum + parseFloat(r.amount), 0);
-    }
-
-    function addRepayment(index) {
-      const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
-        alert('กรุณากรอกจำนวนที่ถูกต้อง'); return;
+      function formatDate(dateStr) {
+        const d = new Date(dateStr);
+        return d.toLocaleDateString('th-TH');
       }
-      if (!loans[index].repayments) loans[index].repayments = [];
-      loans[index].repayments.push({ type: 'principal', amount: parseFloat(amount), date: new Date().toISOString() });
-      localStorage.setItem('loans', JSON.stringify(loans));
-      calcSummary();
-    }
 
-    function markInterestPaid(index) {
-      const amount = prompt('กรุณากรอกจำนวนดอกเบี้ยที่จ่าย (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
-        alert('กรุณากรอกจำนวนที่ถูกต้อง'); return;
+      function showPopup() {
+        const popup = document.getElementById('popup');
+        popup.classList.add('show');
+        setTimeout(() => popup.classList.remove('show'), 1500);
       }
-      if (!loans[index].repayments) loans[index].repayments = [];
-      loans[index].repayments.push({ type: 'interest', amount: parseFloat(amount), date: new Date().toISOString() });
-      loans[index].lastInterestPaid = new Date().toISOString();
-      localStorage.setItem('loans', JSON.stringify(loans));
-      calcSummary();
-    }
 
-    function showHistory(index) {
-      const loan = loans[index];
-      const content = document.getElementById('historyContent');
-      if (!loan.repayments || loan.repayments.length === 0) {
-        content.innerHTML = '<p>ยังไม่มีประวัติการชำระเงิน</p>';
-      } else {
-        content.innerHTML = '<ul>' + loan.repayments.map(r =>
-          `<li>${r.type === 'interest' ? '💸 ดอกเบี้ย' : '💰 เงินต้น'}: ${r.amount.toLocaleString()} บาท — ${formatDate(r.date)}</li>`
-        ).join('') + '</ul>';
+      function showHistory(index) {
+        const loan = loans[index];
+        const content = document.getElementById('historyContent');
+        if (!loan.repayments || loan.repayments.length === 0) {
+          content.innerHTML = '<p>ยังไม่มีประวัติการชำระเงิน</p>';
+        } else {
+          content.innerHTML = '<ul>' + loan.repayments.map(r =>
+            `<li>${r.type === 'interest' ? '💸 ดอกเบี้ย' : '💰 เงินต้น'}: ${r.amount.toLocaleString()} บาท — ${formatDate(r.date)}</li>`
+          ).join('') + '</ul>';
+        }
+        document.getElementById('historyPopup').classList.add('show');
       }
-      document.getElementById('historyPopup').classList.add('show');
-    }
 
-    function deleteLoan(index) {
-      if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
-        loans.splice(index, 1);
+      function addRepayment(index) {
+        const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
+        if (!amount || isNaN(amount) || parseFloat(amount) <= 0) return;
+        if (!loans[index].repayments) loans[index].repayments = [];
+        loans[index].repayments.push({ type: 'principal', amount: parseFloat(amount), date: new Date().toISOString() });
         localStorage.setItem('loans', JSON.stringify(loans));
         calcSummary();
       }
-    }
 
-    function calcSummary() {
-      const tableBody = document.querySelector('#summaryTable tbody');
-      tableBody.innerHTML = '';
-      const now = new Date();
-      const chartData = [];
-      let totalPrincipal = 0, totalAccumulated = 0, totalNextMonth = 0;
+      function markInterestPaid(index) {
+        const amount = prompt('กรุณากรอกจำนวนดอกเบี้ยที่จ่าย (บาท):');
+        if (!amount || isNaN(amount) || parseFloat(amount) <= 0) return;
+        if (!loans[index].repayments) loans[index].repayments = [];
+        loans[index].repayments.push({ type: 'interest', amount: parseFloat(amount), date: new Date().toISOString() });
+        loans[index].lastInterestPaid = new Date().toISOString();
+        localStorage.setItem('loans', JSON.stringify(loans));
+        calcSummary();
+      }
 
-      loans.forEach((loan, index) => {
-        const principalPaid = getTotalPaid(loan, 'principal');
-        let netPrincipal = loan.principal - principalPaid;
-        if (netPrincipal < 0) netPrincipal = 0;
+      function calcSummary() {
+        summaryTableBody.innerHTML = '';
+        let totalPrincipal = 0;
+        let totalAccumulated = 0;
+        let totalNextMonth = 0;
+        const now = new Date();
+        const chartData = [];
 
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = parseFloat((interestPerDay * daysPassed).toFixed(2));
-        const nextMonth = parseFloat((netPrincipal * loan.rate / 100).toFixed(2));
+        loans.forEach((loan, index) => {
+          const principalPaid = (loan.repayments || []).filter(r => r.type === 'principal').reduce((sum, r) => sum + r.amount, 0);
+          let netPrincipal = loan.principal - principalPaid;
+          if (netPrincipal < 0) netPrincipal = 0;
 
-        const interestPaid = getTotalPaid(loan, 'interest');
-        const unpaidInterest = Math.max(0, accumulated - interestPaid);
+          const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+          const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+          const accumulated = parseFloat((interestPerDay * daysPassed).toFixed(2));
+          const nextMonth = parseFloat((netPrincipal * loan.rate / 100).toFixed(2));
 
-        const loanStartDate = new Date(loan.startDate);
-        const monthsSinceStart = (now.getFullYear() - loanStartDate.getFullYear()) * 12 + (now.getMonth() - loanStartDate.getMonth());
-        const nextDue = new Date(loanStartDate);
-        nextDue.setMonth(loanStartDate.getMonth() + monthsSinceStart);
+          const monthsSinceStart = Math.floor((now.getFullYear() - new Date(loan.startDate).getFullYear()) * 12 + (now.getMonth() - new Date(loan.startDate).getMonth()));
+          const nextDue = new Date(loan.startDate);
+          nextDue.setMonth(nextDue.getMonth() + monthsSinceStart);
 
-        const rowClass = netPrincipal > 0 && unpaidInterest > 0 ? 'style=\"background-color:#ffcccc\"' : '';
+          totalPrincipal += netPrincipal;
+          totalAccumulated += accumulated;
+          totalNextMonth += nextMonth;
 
-        totalPrincipal += netPrincipal;
-        totalAccumulated += accumulated;
-        totalNextMonth += nextMonth + unpaidInterest;
+          summaryTableBody.innerHTML += `
+            <tr>
+              <td>${loan.name}</td>
+              <td>${netPrincipal.toLocaleString()}</td>
+              <td>${loan.rate}%</td>
+              <td>${formatDate(loan.startDate)}</td>
+              <td>${daysPassed} วัน</td>
+              <td>${accumulated.toLocaleString()}</td>
+              <td>${nextMonth.toLocaleString()}</td>
+              <td>${formatDate(nextDue)}</td>
+              <td>
+                <button onclick="addRepayment(${index})">คืนเงินต้น</button><br>
+                <button onclick="markInterestPaid(${index})">จ่ายดอก</button><br>
+                <button onclick="showHistory(${index})">📜 History</button>
+              </td>
+              <td><button onclick="if(confirm('ลบรายการนี้?')) { loans.splice(${index},1); localStorage.setItem('loans', JSON.stringify(loans)); calcSummary(); }">🗑️</button></td>
+            </tr>`;
 
-        tableBody.innerHTML += `
-          <tr ${rowClass}>
-            <td>${loan.name}</td>
-            <td>${netPrincipal.toLocaleString()}</td>
-            <td>${loan.rate}%</td>
-            <td>${formatDate(loan.startDate)}</td>
-            <td>${daysPassed} วัน</td>
-            <td>${accumulated.toLocaleString()}</td>
-            <td>${(nextMonth + unpaidInterest).toLocaleString()}</td>
-            <td>${formatDate(nextDue)}</td>
-            <td>
-              <button onclick="addRepayment(${index})">คืนเงินต้น</button><br>
-              <button onclick="markInterestPaid(${index})" style="background:${unpaidInterest <= 0 ? '#d3fcd3' : '#ffd4e3'}">${unpaidInterest <= 0 ? 'จ่ายแล้ว' : 'จ่ายดอก'}</button><br>
-              <button onclick="showHistory(${index})">📜 History</button>
-            </td>
-            <td><button onclick="deleteLoan(${index})">🗑️</button></td>
-          </tr>`;
-        chartData.push({ name: loan.name, remaining: netPrincipal });
-      });
+          chartData.push({ name: loan.name, remaining: netPrincipal });
+        });
 
-      document.getElementById('summaryFooter').innerHTML =
-        `💰 เงินต้นคงเหลือรวม: <span class="val-gold">${totalPrincipal.toLocaleString()} บาท</span><br>` +
-        `📈 ดอกเบี้ยสะสม: <span class="val-green">${totalAccumulated.toLocaleString()} บาท</span><br>` +
-        `🔮 ดอกเบี้ยเดือนหน้า: <span class="val-blue">${totalNextMonth.toLocaleString()} บาท</span>`;
+        summaryFooter.innerHTML =
+          `💰 เงินต้นคงเหลือรวม: <span class="val-gold">${totalPrincipal.toLocaleString()} บาท</span><br>` +
+          `📈 ดอกเบี้ยสะสม: <span class="val-green">${totalAccumulated.toLocaleString()} บาท</span><br>` +
+          `🔮 ดอกเบี้ยเดือนหน้า: <span class="val-blue">${totalNextMonth.toLocaleString()} บาท</span>`;
 
-      if (chartData.length > 0) updateChart(chartData);
-    }
-
-    function updateChart(data) {
-      const ctx = document.getElementById('loanChart').getContext('2d');
-      if (window.loanChart) window.loanChart.destroy();
-      const maxAmount = Math.max(...data.map(d => d.remaining));
-      window.loanChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: data.map(l => l.name),
-          datasets: [{
-            label: 'เงินต้นคงเหลือ (บาท)',
-            data: data.map(l => l.remaining),
-            backgroundColor: data.map(l => `rgba(255, 105, 135, ${Math.max(0.3, l.remaining / maxAmount)})`),
-            borderRadius: 10
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: { legend: { display: false } },
-          scales: { y: { beginAtZero: true } }
-        }
-      });
-    }
-
-    function downloadExcel() {
-      const wb = XLSX.utils.book_new();
-      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
-      const now = new Date();
-      loans.forEach(loan => {
-        const principalPaid = getTotalPaid(loan, 'principal');
-        const netPrincipal = loan.principal - principalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = (interestPerDay * daysPassed).toFixed(2);
-        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-        const nextDue = new Date(loan.startDate); nextDue.setMonth(nextDue.getMonth() + 1);
-        wsData.push([loan.name, netPrincipal, loan.rate + '%', formatDate(loan.startDate), `${daysPassed} วัน`, parseFloat(accumulated), parseFloat(nextMonth), formatDate(nextDue)]);
-      });
-      XLSX.utils.book_append_sheet(wb, XLSX.utils.aoa_to_sheet(wsData), 'Loan Summary');
-      XLSX.writeFile(wb, 'loan_summary.xlsx');
-    }
-
-    function uploadData(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = e => {
-        try {
-          const newData = JSON.parse(e.target.result);
-          if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
-          newData.forEach(item => {
-            if (typeof item.name !== 'string') throw 'ชื่อไม่ถูกต้อง';
-            if (typeof item.principal !== 'number' || item.principal < 0) throw 'เงินต้นไม่ถูกต้อง';
-            if (typeof item.rate !== 'number' || item.rate < 0) throw 'อัตราดอกเบี้ยไม่ถูกต้อง';
-            if (typeof item.startDate !== 'string' || isNaN(Date.parse(item.startDate))) throw 'วันที่เริ่มไม่ถูกต้อง';
-            if (!Array.isArray(item.repayments)) throw 'ประวัติการคืนเงินไม่ถูกต้อง';
+        if (loanChart) loanChart.destroy();
+        if (chartData.length > 0) {
+          const maxAmount = Math.max(...chartData.map(d => d.remaining));
+          loanChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+              labels: chartData.map(l => l.name),
+              datasets: [{
+                label: 'เงินต้นคงเหลือ (บาท)',
+                data: chartData.map(l => l.remaining),
+                backgroundColor: chartData.map(l => `rgba(255, 105, 135, ${Math.max(0.3, l.remaining / maxAmount)})`),
+                borderRadius: 10
+              }]
+            },
+            options: {
+              responsive: true,
+              maintainAspectRatio: false,
+              plugins: { legend: { display: false } },
+              scales: { y: { beginAtZero: true } }
+            }
           });
-          loans = newData;
-          localStorage.setItem('loans', JSON.stringify(loans));
-          calcSummary();
-          alert('นำเข้าข้อมูลสำเร็จ');
-        } catch (err) {
-          alert('เกิดข้อผิดพลาด: ' + err);
         }
-      };
-      reader.readAsText(file);
-    }
+      }
 
-    document.getElementById('loan
+      loanForm.addEventListener('submit', function (e) {
+        e.preventDefault();
+        const newLoan = {
+          name: nameInput.value,
+          principal: parseFloat(principalInput.value),
+          rate: parseFloat(rateInput.value),
+          startDate: startDateInput.value,
+          repayments: []
+        };
+        loans.push(newLoan);
+        localStorage.setItem('loans', JSON.stringify(loans));
+        loanForm.reset();
+        calcSummary();
+        showPopup();
+      });
+
+      calcSummary();
+    });
+  </script>
+</body>
+</html>
